intercom-attributes/tests/data/ui/span-comimpl-no-interface.rs.stderr
error[E0277]: the trait bound `(dyn NotComInterface + 'static): intercom::attributes::ComInterface<intercom::type_system::AutomationTypeSystem>` is not satisfied
 --> span-comimpl-no-interface.rs:7:1
  |
7 | #[com_class(NotComInterface)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `intercom::attributes::ComInterface<intercom::type_system::AutomationTypeSystem>` is not implemented for `(dyn NotComInterface + 'static)`

error[E0277]: the trait bound `(dyn NotComInterface + 'static): intercom::attributes::ComInterface<intercom::type_system::RawTypeSystem>` is not satisfied
 --> span-comimpl-no-interface.rs:7:1
  |
7 | #[com_class(NotComInterface)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `intercom::attributes::ComInterface<intercom::type_system::RawTypeSystem>` is not implemented for `(dyn NotComInterface + 'static)`

error[E0277]: the trait bound `(dyn NotComInterface + 'static): intercom::attributes::ComInterface<intercom::type_system::AutomationTypeSystem>` is not satisfied
  --> span-comimpl-no-interface.rs:11:6
   |
11 | impl NotComInterface for S {}
   |      ^^^^^^^^^^^^^^^ the trait `intercom::attributes::ComInterface<intercom::type_system::AutomationTypeSystem>` is not implemented for `(dyn NotComInterface + 'static)`

error[E0277]: the trait bound `(dyn NotComInterface + 'static): intercom::attributes::ComInterface<intercom::type_system::RawTypeSystem>` is not satisfied
  --> span-comimpl-no-interface.rs:11:6
   |
11 | impl NotComInterface for S {}
   |      ^^^^^^^^^^^^^^^ the trait `intercom::attributes::ComInterface<intercom::type_system::RawTypeSystem>` is not implemented for `(dyn NotComInterface + 'static)`

error[E0277]: the trait bound `(dyn NotComInterface + 'static): intercom::ComInterface` is not satisfied
  --> span-comimpl-no-interface.rs:11:1
   |
11 | impl NotComInterface for S {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `intercom::ComInterface` is not implemented for `(dyn NotComInterface + 'static)`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
